--- a/smartbot/src/tsconfig.app.json
+++ b/smartbot/src/tsconfig.app.json
@@ -2,12 +2,12 @@
   "extends": "../tsconfig.json",
   "compilerOptions": {
     "outDir": "../out-tsc/app",
-    "baseUrl": "src",
+    "baseUrl": "./",
     "module": "es2015",
     "types": [],
-    "paths": {
-      "@app/*": ["app/*"],
-      "@env/*": ["environments/*"]
+    "paths" : {
+      "@app/*" : ["app/*"],
+      "@env/*" : ["environments/*"]
     }
   },
   "exclude": [
