--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "AUT Chatbot App",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jshint paperDataController.js",
     "start": "node index.js"
   },
   "dependencies": {
