--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "AUT Chatbot App",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha",
     "start": "node index.js"
   },
   "dependencies": {
@@ -18,6 +18,8 @@
   "license": "ISC",
   "devDependencies": {
     "@angular/cli": "*",
+    "chai": "^4.1.2",
+    "mocha": "^5.2.0",
     "nodemon": "^1.17.4"
   }
 }
