--- a/package.json
+++ b/package.json
@@ -19,6 +19,10 @@
   "devDependencies": {
     "@angular/cli": "*",
     "chai": "^4.1.2",
+    "gulp": "^3.9.1",
+    "gulp-jshint": "^2.1.0",
+    "jshint": "^2.9.5",
+    "jshint-stylish": "^2.2.1",
     "mocha": "^5.2.0",
     "nodemon": "^1.17.4"
   }
