--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,9 @@
 language: node_js
 sudo: false
 node-js:
-  - "iojs"
-  - "8"
+  - "node"
 install:
   - npm install
 script:  
-  - npm run test
-  - gulp jshint 
+  - npm test
+  # - gulp jshint 
