--- a/package.json
+++ b/package.json
@@ -11,19 +11,20 @@
     "express": "*",
     "mongodb": "*",
     "mongoose": "*",
-    "body-parser": "*",
     "cors": "*"
   },
   "author": "Kiran Chandradevan",
   "license": "ISC",
   "devDependencies": {
     "@angular/cli": "*",
+    "body-parser": "^1.18.3",
     "chai": "^4.1.2",
     "gulp": "^3.9.1",
     "gulp-jshint": "^2.1.0",
     "jshint": "^2.9.5",
     "jshint-stylish": "^2.2.1",
     "mocha": "^5.2.0",
-    "nodemon": "^1.17.4"
+    "nodemon": "^1.17.4",
+    "supertest": "^3.1.0"
   }
 }
