--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,12 @@
 language: node_js
-sudo: false
+sudo: required
 node-js:
   - "node"
+before_install:
+  - npm install -g node-gyp
+before_script:
+  - npm install
+  - npm install -g standard
 script:  
   - npm test
   # - gulp jshint 
