--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,8 @@ language: node_js
 sudo: required
 node-js:
   - "node"
+services:
+  - mongodb
 before_install:
   - npm install -g node-gyp
 before_script:
