--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,17 @@
+# language: node_js
+# sudo: required
+# node-js:
+#   - "node"
+# services:
+#   - mongodb
+# before_install:
+#   - npm install -g node-gyp
+# before_script:
+#   - npm install
+#   - npm install -g standard
+# script:  
+#   - npm test
+#   - gulp jshint 
 language: node_js
-sudo: required
-node-js:
+node_js:
   - "node"
-services:
-  - mongodb
-before_install:
-  - npm install -g node-gyp
-before_script:
-  - npm install
-  - npm install -g standard
-script:  
-  - npm test
-  - gulp jshint 
